[package]
name = "orbweaver"
version = "0.10.4"
edition = "2021"
authors = ["ixpantia <hola@ixpantia.com>", "Andrés F. Quintero <andres@ixpantia.com>"]
description = "Crate designed for effortless construction and analysis of graph data structures."
repository = "https://github.com/ixpantia/orbweaver-rs"
license = "MIT"
readme = "README.md"
exclude = ["tests/", "benches/"]

[dev-dependencies]
criterion = "0.5"
ureq = "2.9.7"

[dependencies]
fxhash = "0.2.1"
string-interner = { version = "0.17", features = ["serde"] }
rayon = "1.10.0"
serde = { version = "1.0.202", features = ["derive", "rc"], optional = true }
serde_cbor = { version = "0.11.2", optional = true }
flate2 = { version = "1.0", optional = true }

[features]
serde = ["dep:serde"]
binary = ["serde", "dep:serde_cbor", "dep:flate2"]
default = ["serde", "binary"]

[[bench]]
name = "directed_graph"
harness = false
